# dennis_enhanced

./: CMakeLists.txt  README.md
dectalk/: dectalkf.h
dectalk/dapi/src/: CE.DEP  CE.VCL  CE.VCN  CE.VCP  CMakeLists.txt  Makefile.in  Wtlkstat.dep  cedll.dep  cedll.vcl  cedll.vcn  cedll.vcp  d2static.dep  demostat.dep  devdtk43.dep  dtdemo.dep  dtlkstat.dep  dtstatic.dep
dectalk/dapi/src/API/: Makefile.in  TTSAPI.H  Tts.h  coop.h  epsonapi.c  epsonapi.h  init.c  ttsapi.c
dectalk/dapi/src/CMD/: C_US_CDE.H  Cmd_init.c  cm_cmd.c  cm_copt.c  cm_data.h  cm_def.h  cm_defs.h  cm_main.c  cm_pars.c  cm_phon.c  cm_prot.h  cm_text.c  cm_util.c  cmd_wav.c  par_char.c  par_dict.c  par_pars.c  par_pars1.c  par_rule2.h  par_rule2.par  par_rule2b.h
dectalk/dapi/src/INCLUDE/: bachus.h  bachusfeatures.h  bachusi.h  cmd.h  dt_abort.h  esc.h  fr_err.tab  fr_type.tab  ger_err.tab  ger_type.tab  kernel.h  l_all_ph.h  l_uk_ph.h  l_us_ph.h  la_err.tab  la_type.tab  ls_lower.tab  ls_upper.tab  phonlist.h  pipe.h  port.h  spa_err.tab  spa_type.tab  uk_err.tab  uk_type.tab  usa_err.tab  usa_phon.tab  usa_type.tab
dectalk/dapi/src/KERNEL/: Usa_init.c  services.c
dectalk/dapi/src/LTS/: Makefile.in  allorules.c  l_ac_con.c  l_fr_con.c  l_fr_ma1.c  l_fr_pr1.c  l_fr_rta.c  l_fr_ru1.c  l_gr_con.c  l_gr_ma1.c  l_gr_pr1.c  l_gr_rta.c  l_gr_ru1.c  l_gr_sp1.c  l_gr_suf.c  l_gr_suf_b.c  l_la_ad1.c  l_la_con.c  l_la_ma1.c  l_la_pr1.c  l_la_ru1.c  l_sp_ad1.c  l_sp_con.c  l_sp_ma1.c  l_sp_pr1.c  l_sp_ru1.c  l_uk_con.c  l_uk_ma1.c  l_uk_pr1.c  l_uk_rta.c  l_uk_ru1.c  l_uk_spe.c  l_uk_suf.c  l_uk_suf_b.c  l_us_cha.c  l_us_con.c  l_us_ma1.c  l_us_pr1.c  l_us_rta.c  l_us_ru1.c  (+43 more)
dectalk/dapi/src/NT/: audio.c  linux_audio.c  linux_audio.h  mmalloc.c  mmalloc.h  opatype.h  opmmsys.h  opthread.c  opthread.h  pipe.c  playaud.c  playaud.h  playaudd.h  shmalloc.h  spc.c
dectalk/dapi/src/PH/: 88.bat  P_UK_SR1.C  P_UK_SY1.C  P_fr_vdf1.c  P_us_vdf1.c  Ph_drwt02.c  Ph_fr_inton2.c  Ph_inton2.c  SDOIT.BAT  UDOIT.BAT  adid.bat  cj.bat  heb.bat  hlsynapi.h  kdid.bat  p_all_ph.h  p_fr_rom.c  p_fr_romref.c  p_fr_sr1.c  p_fr_st1.c  p_fr_sy1.c  p_fr_vdf_tuneint.c  p_gr_rom.c  p_gr_romref.c  p_gr_st1.c  p_gr_tim.c  p_gr_vdf_tuneint.c  p_la_rom.c  p_la_sr1.c  p_la_st1.c  p_la_tim.c  p_la_vdf_tuneint.c  p_sp_rom.c  p_sp_sr1.c  p_sp_st1.c  p_sp_sy1.c  p_sp_tim.c  p_sp_vdf_tuneint.c  p_uk_rom.c  p_uk_romref.c  (+38 more)
dectalk/dapi/src/VTM/: playtone.c  sync.c  vfmd2pol.h  viphdefs.h  vtm1.c  vtm2.c  vtm3.c  vtm_fa.c  vtmfunc.h  vtminst.h  vtmio.c  vtmiont.c  vtmtable.h
dectalk/dapi/src/dic/: Makefile.in  dic.c  dic_comm.c  invalid.txt
dectalk/dapi/src/espontest/: epsonapi.h  epsontest.c
dectalk/dapi/src/hlsyn/: Makefile.in  acxf1c.c  brent.c  circuit.c  diffuse.c  frame.c  hlframe.c  hlsyn.h  inithl.c  llinit.c  llsyn.h  log10table.c  nasalf1x.c  reson.c  reson.h  sample.c  sqrttable.c  synth.h  voice.c
dectalk/dapi/src/osf/: dtmmedefs.h  dtmmio.c  dtmmiodefs.h
dennis/: CMakeLists.txt  dectalk.cpp  dectalk.h  dennis.cpp  dennis.h  dennis.rc  main.cpp
dennis_watcher/: CMakeLists.txt  watch.cpp
installer/: install.nsi  installer.pdn
public/: utility.h
say/: CMakeLists.txt  say.c
